first working version

--- a/_posts/2020-03-13-intro.md
+++ b/_posts/2020-03-13-intro.md
@@ -7,4 +7,8 @@ style: center
 
 # Dilemma, un jeu de coopétition
 
+Un jeu très simple pour pouvoir éventuellement discuter d'écologie et de réchauffement climatique avec des gens avec qui on ne le ferait pas habituellement (vos beaux parents, vos voisins...).
+
+Le jeu est au format "apéro" (peu de matériel, moins de 15 min) et mise avant tout sur le fun en utilisant la mécanique du dilemne du prisonnier.
+
 Créé par [Nathaniel](mailto:nathaniel@agiletribu.com).
