--- a/_posts/2020-03-14-Objectif.md
+++ b/_posts/2020-03-14-Objectif.md
@@ -1,7 +1,10 @@
 ---
 title: "Objectif"
-bg: '#419BBF'  #defined in _config.yml, can use html color like '#0fbfcf'
+bg: grey  #defined in _config.yml, can use html color like '#0fbfcf'
 color: white   #text color
 fa-icon: bullseye
 ---
-TODO
+
+Prendre conscience de **l'intérêt d'agir pour le climat** : si j'agis je n'ai pas forcemment d'impact global sur le climat, mais si je n'agis pas le climat finira forcément par exploser.
+
+Discuter ensemble de l'impact de certaines **actions quotidiennes**.
