--- a/_posts/2020-03-15-Matériel.md
+++ b/_posts/2020-03-15-Matériel.md
@@ -1,6 +1,6 @@
 ---
 title: "Matériel"
-bg: '#D5D9C7'  #defined in _config.yml, can use html color like '#0fbfcf'
+bg: blancasse  #defined in _config.yml, can use html color like '#0fbfcf'
 color: black   #text color
 fa-icon: puzzle-piece
 ---
