--- a/_posts/2020-03-16-ATester.md
+++ b/_posts/2020-03-16-ATester.md
@@ -1,7 +1,10 @@
 ---
 title: "A tester"
-bg: '#5ABFAD'  #defined in _config.yml, can use html color like '#0fbfcf'
+bg: orange  #defined in _config.yml, can use html color like '#0fbfcf'
 color: white   #text color
 fa-icon: vial
 ---
-Idées à tester
+Idées en cours de test :
+* Faire des personnages avec des comportements particuliers (exemple : Donald qui quoi qu’il arrive choisi toujours la carte la mieux pour lui sans prendre en compte l’impact climatique ...)
+* Faire des cartes d’objectifs secret qui remplace l’objectif de points (exemple : Finir la partie  au max au seuil 4, finir avec un relationnel >= 6, finir avec au moins toutes les catégories à 3...) Et il pourrait y avoir plusieurs gagnant.
+* ...
