--- a/_posts/2020-03-17-Contact.md
+++ b/_posts/2020-03-17-Contact.md
@@ -1,9 +1,9 @@
 ---
 title: "En savoir plus"
-bg: '#D5D9C7'  #defined in _config.yml, can use html color like '#0fbfcf'
+bg: blancasse  #defined in _config.yml, can use html color like '#0fbfcf'
 color: black   #text color
 fa-icon: address-card
 ---
 
 
-Formulaire de contact embed
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeAuy0ZGLyLVn0oMQrGMkHG6jC4oavKEb2z_w7AE6p8T2ZQcg/viewform?embedded=true" width="640" height="574" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
